--- a/package.json
+++ b/package.json
@@ -16,22 +16,31 @@
     "@fortawesome/vue-fontawesome": "^2.0.9",
     "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
-    "bootstrap-vue": "^2.23.1",
+    "apexcharts": "^3.37.0",
+    "chart.js": "^2.9.4",
     "core-js": "^3.25.3",
+    "hchs-vue-charts": "^1.2.8",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-awesome": "^4.5.0",
+    "vue-html2pdf": "^1.8.0",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vue2-filters": "^0.14.0"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/tailwindcss": "^5.3.3",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
+    "html2pdf.js": "^0.10.1",
     "postcss": "^8.4.21",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "webpack": "^4.46.0"
   }
 }
